--- a/canvas.html
+++ b/canvas.html
@@ -14,6 +14,7 @@
     </canvas>
     <br>
     <button id="animate">Animate</button>
+    <button id="start">Continue</button>
     <button id="stop">Stop</button><br>
     <script src="canvas.js"></script>
   </body>
