--- a/canvas.html
+++ b/canvas.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Animations </title>
+    <title> Animatics </title>
     <style>
       #slate {border: 1px solid black}
     </style>
   </head>
 
   <body>
-    <h1> The Circle </h1>
+    <h1> Animations </h1>
     <canvas height="500" width="500" id="slate">
       You shouldn't see this
     </canvas>
     <br>
     <button id="animate">Animate</button>
-    <button id="start">Continue</button>
+    <button id="start">Continue Circle</button><br>
+    <button id="bounce">Bounce</button>
+    <button id="continue">Continue Rectangle</button><br>
     <button id="stop">Stop</button><br>
     <script src="canvas.js"></script>
   </body>
